# Lansweeper.Helpdesk-Python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  helpdesk.py  pyproject.toml  readme.md
.github/workflows/: ci.yml  publish-testpypi.yml
config/: config.json
src/lansweeper_helpdesk/: __init__.py  client.py  exceptions.py  types.py
tests/: conftest.py  test_client.py  test_types.py
