[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lansweeper-helpdesk"
dynamic = ["version"]
description = "Python SDK for the Lansweeper Helpdesk API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Daniel Brandao" },
]
keywords = ["lansweeper", "helpdesk", "api", "sdk", "itsm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28",
    "beautifulsoup4>=4.12",
]

[project.urls]
Homepage = "https://github.com/ds-brandao/Lansweeper.Helpdesk-Python"
Repository = "https://github.com/ds-brandao/Lansweeper.Helpdesk-Python"
Issues = "https://github.com/ds-brandao/Lansweeper.Helpdesk-Python/issues"
Changelog = "https://github.com/ds-brandao/Lansweeper.Helpdesk-Python/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests>=2.31",
    "types-beautifulsoup4>=4.12",
]

[tool.hatch.version]
path = "src/lansweeper_helpdesk/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/lansweeper_helpdesk"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
